<resources>
    <string name="app_name">LenskieGid</string>
    <string name="home">Домой</string>
    <string name="navigation_menu">Меню</string>
    <string name="start_route">Начать маршрут</string>
    <string name="route_duration_label">ч</string>
    <string name="route_arrival_label">прибытие</string>
    <string name="route_distance_label">км</string>
    <string name="navigation_menu_title">Настройки</string>
    <string name="navigation_menu_audio">Аудиогид</string>
    <string name="navigation_menu_audio_auto">Авто воспроизведение в зоне</string>
    <string name="navigation_menu_hint">Пункты про метки и подсказки появятся позже</string>
    <string name="home_placeholder_toast">Скоро здесь появятся быстрые действия</string>
    <string name="offline_banner_title">Доступен офлайн-пакет</string>
    <string name="offline_banner_download">Загрузить</string>
    <string name="route_in_progress">Поездка</string>
    <string name="locate_me">Где я?</string>
    <string name="continue_label">Продолжить</string>
    <string name="next_label">Далее</string>
    <string name="main_menu_open_map">Перейти к карте</string>
    <string name="main_menu_about_lenskie">О Ленских Столбах</string>
    <string name="main_menu_checklist_title">Чек-лист</string>
    <string name="main_menu_checklist_item_1">\u2022 Проверьте наличие офлайн-пакета</string>
    <string name="main_menu_checklist_item_2">\u2022 Включите геолокацию</string>
    <string name="main_menu_checklist_item_3">\u2022 Заполните профиль (скоро)</string>
</resources>
