<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/mainMenuBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@null"
        android:scaleType="centerCrop"
        android:src="@drawable/main_menu_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tvGreeting"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:shadowColor="#80000000"
        android:shadowDx="0"
        android:shadowDy="2"
        android:shadowRadius="6"
        android:text="Добрый день"
        android:textColor="@android:color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.55" />

    <ImageButton
        android:id="@+id/btnOpenMap"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/main_menu_open_map"
        android:scaleType="fitCenter"
        android:src="@drawable/main_menu_btn_start_map"
        app:layout_constraintDimensionRatio="347:83"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvGreeting"
        app:layout_constraintWidth_percent="0.9" />

    <!-- Временное web-меню поверх нативных кнопок, чтобы легко удалить/откатить -->
    <WebView
        android:id="@+id/webViewMainMenu"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toBottomOf="@id/tvGreeting"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/btnAboutLenskieStolby"
        android:layout_width="195dp"
        android:layout_height="394dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/main_menu_about_lenskie"
        android:scaleType="fitCenter"
        android:src="@drawable/btn_about_lenskie_stolby"
        app:layout_constraintDimensionRatio="178:344"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnOpenMap"
        app:layout_constraintWidth_percent="0.5" />

    <ImageButton
        android:id="@+id/btnChecklist"
        android:layout_width="165dp"
        android:layout_height="167dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/main_menu_checklist_title"
        android:scaleType="fitCenter"
        android:src="@drawable/btn_check_list"
        app:layout_constrainedWidth="true"
        app:layout_constraintDimensionRatio="166:174"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/guidelineRight"
        app:layout_constraintTop_toBottomOf="@id/btnOpenMap"
        app:layout_constraintWidth_percent="0.38" />

</androidx.constraintlayout.widget.ConstraintLayout>
